--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,17 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+
+.gallery{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.galley-item-img{
+  height: 300px;
+  width:500px;
+}
